--- a/index.html
+++ b/index.html
@@ -8,11 +8,30 @@
 </head>
 <body>
     <h1>Mi Primer Pagina Este Semestre</h1> <!--Este es un comentario, esto sirve para poner titulos-->
-    <h4>Who are you?</h4>
+    <h2>Heading level 2</h2>
+    <h3>Heading level 3</h3>
+    <h4>Heading level 4</h4>
+    <h5>Heading level 5</h5>
+    <h6>Heading level 6</h6>
 
     <p>Este es un parrafo</p>
     <p>Este es un parrafo</p>
     <p>Este es un parrafo</p>
+    <p>Este es un parrafo</p>
+
+    <form action=""> <!--Este es formulario-->
+    <label for="name">Nombre</label>
+    <input type="text" id="name" name="frame" placeholder="Nombre"><br><br>
+    <label for="name">Apellido</label>
+    <input type="text" id="lastname" lastname="frame"placeholder="Apellido"><br><br>
+    <label for="name">Edad</label>
+    <input type="number" id="number" number="frame" placeholder="Edad"><br><br>
+    <label for="name">Correo</label>
+    <input type="email" id="email" email="frame"placeholder="Correo"><br><br>
+    <label for="name">Contraseña</label>
+    <input type="password"><br><br>
+    <button type="submit">Enviar</button>
+</form>
 
 </body>
 </html>
