--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practica 1</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Mi Primer Pagina Este Semestre</h1> <!--Este es un comentario, esto sirve para poner titulos-->
@@ -31,7 +32,9 @@
     <label for="name">Contraseña</label>
     <input type="password"><br><br>
     <button type="submit">Enviar</button>
+
 </form>
+<img src="img/kazu.jpg" alt="" height="200px" width="250px">
 
 </body>
 </html>
