--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header class="header">
+        <!--Logo con link a la pagina principal-->
+        <a>
+            <img src="img/Genshin-Impact-Logo.png" alt="" height="90px" width="110px"/>
+            <!--Menu de navegacion-->
+        </a>
+        <nav>
+            <ul> <!--Contenedor de la lista, li es para poner un punto antes -->
+                <li>Protogemas</li>
+                <li>Mora</li>
+                <li>Personajes</li>
+                <li>Kazuha</li>
+            </ul>
+        </nav>
+        <!--Contenedor de acciones de usuario-->
+        <div>
+            <a>Sign In</a>
+            <button>Start Free Trial</button>
+        </div>
+
+
+    </header>
     <h1>Mi Primer Pagina Este Semestre</h1> <!--Este es un comentario, esto sirve para poner titulos-->
     <h2>Heading level 2</h2>
     <h3>Heading level 3</h3>
