--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <header class="header">
         <!--Logo con link a la pagina principal-->
         <a>
-            <img src="img/Genshin-Impact-Logo.png" alt="" height="90px" width="110px"/>
+            <img class="logo" src="img/Genshin-Impact-Logo.png" width="150px" height="10px"/>
             <!--Menu de navegacion-->
         </a>
-        <nav>
+        <nav class="navbar">
             <ul> <!--Contenedor de la lista, li es para poner un punto antes -->
                 <li>Protogemas</li>
                 <li>Mora</li>
@@ -23,7 +23,7 @@
             </ul>
         </nav>
         <!--Contenedor de acciones de usuario-->
-        <div>
+        <div class="actions">
             <a>Sign In</a>
             <button>Start Free Trial</button>
         </div>
