--- a/index.html
+++ b/index.html
@@ -58,5 +58,8 @@
 </form>
 <img src="img/kazu.jpg" alt="" height="200px" width="250px">
 
+<section>
+    <video src="https://www.youtube.com/watch?v=XFkBmfK62_A"></video>
+</section>
 </body>
 </html>
