--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <img src="img/kazu.jpg" alt="" height="200px" width="250px">
 
 <section>
-    <video src="https://www.youtube.com/watch?v=XFkBmfK62_A"></video>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/XFkBmfK62_A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </section>
 </body>
 </html>
