--- a/index.html
+++ b/index.html
@@ -58,8 +58,29 @@
 </form>
 <img src="img/kazu.jpg" alt="" height="200px" width="250px">
 
-<section>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/XFkBmfK62_A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<section class="video">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/XFkBmfK62_A?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+    <article class="publish">
+        <h3>
+            Kazuha The Best Anemo
+        </h3>
+        <p>
+            Kazuha es un personaje support, si lo que buscas es potenciar tu DPS entonces
+            lo mejor es llevarlo full maestría, puesto que así aumenta el bono de daño del 
+            elemento que haya hagarrado ademas de hacer mas daño con dicho elemento gracias
+            a su maestria. 
+            
+        </p>
+        <form action="">
+            <p>Unirse a KazuSimps</p>
+            <div>
+                <input type="text" placeholder="Enter email">
+                <button>Start</button>
+            </div>
+        </form>
+        
+    </article>
 </section>
 </body>
 </html>
