--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <section class="fixed-header">
     <header class="header">
         <!--Logo con link a la pagina principal-->
         <a>
@@ -30,6 +31,7 @@
 
 
     </header>
+    </section>
     <h1>Mi Primer Pagina Este Semestre</h1> <!--Este es un comentario, esto sirve para poner titulos-->
     <h2>Heading level 2</h2>
     <h3>Heading level 3</h3>
@@ -42,6 +44,7 @@
     <p>Este es un parrafo</p>
     <p>Este es un parrafo</p>
 
+    <article class="publish">
     <form action=""> <!--Este es formulario-->
     <label for="name">Nombre</label>
     <input type="text" id="name" name="frame" placeholder="Nombre"><br><br>
@@ -55,7 +58,8 @@
     <input type="password"><br><br>
     <button type="submit">Enviar</button>
 
-</form>
+    </form>
+    </article>
 <img src="img/kazu.jpg" alt="" height="200px" width="250px">
 
 <section class="video">
