--- a/index.html
+++ b/index.html
@@ -174,5 +174,81 @@
 
 </section>
 
+<section class="examen">
+    <article class="examen-features">
+        <h1>Examen</h1>
+        <p>Esto va a salir mal, no sabemos nada</p>
+        <button>Start</button>
+
+    </article>
+</section>
+
+<section class="feature">
+<article class="feature-cards">
+    <div class="feature-contents">
+        <figure class="feature-figure">
+            <img src="img/kazuha1.gif" alt="">
+        </figure>
+        <h3>Esta es la tarjeta uno</h3>
+        <p>
+            Este es el parrafo de la tarjeta uno, claramente, no dice nada
+            pero eso no importa...
+        </p>
+        <a href="">Da clic aquí</a>
+    </div>
+
+</article>
+
+<article class="feature-cards">
+    <div class="feature-contents">
+        <figure class="feature-figure">
+            <img src="img/kazuha2.gif" alt="">
+        </figure>
+        <h3>Esta es la tarjeta dos</h3>
+        <p>
+            Este es el parrafo de la tarjeta dos, claramente, no dice nada
+            pero eso no importa...
+        </p>
+        <a href="">Da clic aquí</a>
+    </div>
+
+</article>
+
+<article class="feature-cards">
+    <div class="feature-contents">
+        <figure class="feature-figure">
+            <img src="img/kazuha3.gif" alt="">
+        </figure>
+        <h3>Esta es la tarjeta tres</h3>
+        <p>
+            Este es el parrafo de la tarjeta tres, claramente, no dice nada
+            pero eso no importa...
+        </p>
+        <a href="">Da clic aquí</a>
+    </div>
+
+</article>
+
+<article class="feature-cards">
+    <div class="feature-contents">
+        <figure class="feature-figure">
+            <img src="img/kazuha1.gif" alt="">
+        </figure>
+        <h3>Esta es la tarjeta cuatro</h3>
+        <p>
+            Este es el parrafo de la tarjeta cuatro, claramente, no dice nada
+            pero eso no importa...
+        </p>
+        <a href="">Da clic aquí</a>
+    </div>
+
+</article>
+
+
+
+
+</section>
+
+
 </body>
 </html>
