--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             Este es el parrafo de la tarjeta uno, claramente, no dice nada
             pero eso no importa...
         </p>
-        <a href="">Da clic aquí</a>
+        <a href="">Da click aquí</a>
     </div>
 
 </article>
@@ -209,7 +209,7 @@
             Este es el parrafo de la tarjeta dos, claramente, no dice nada
             pero eso no importa...
         </p>
-        <a href="">Da clic aquí</a>
+        <a href="">Da click aquí</a>
     </div>
 
 </article>
@@ -224,7 +224,7 @@
             Este es el parrafo de la tarjeta tres, claramente, no dice nada
             pero eso no importa...
         </p>
-        <a href="">Da clic aquí</a>
+        <a href="">Da click aquí</a>
     </div>
 
 </article>
@@ -239,7 +239,7 @@
             Este es el parrafo de la tarjeta cuatro, claramente, no dice nada
             pero eso no importa...
         </p>
-        <a href="">Da clic aquí</a>
+        <a href="">Da click aquí</a>
     </div>
 
 </article>
