--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practica 1</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">  <!--llama a la hoja de estilos-->
 </head>
+
 <body>
     <section class="fixed-header">
     <header class="header">
@@ -29,9 +30,9 @@
             <button>Start Free Trial</button>
         </div>
 
-
     </header>
     </section>
+
     <h1>Mi Primer Pagina Este Semestre</h1> <!--Este es un comentario, esto sirve para poner titulos-->
     <h2>Heading level 2</h2>
     <h3>Heading level 3</h3>
@@ -173,6 +174,41 @@
     </article>
 
 </section>
+
+<section class="tarea">
+    <article class="parrafo">
+        <h1>Kazuha uno de los mejores support Anemo</h1>
+        <p>
+            Kazuha es un personaje support, si lo que buscas es potenciar tu DPS entonces
+            lo mejor es llevarlo full maestría, puesto que así aumenta el bono de daño del 
+            elemento que haya hagarrado ademas de hacer mas daño con dicho elemento gracias
+            a su maestria.  
+        </p>
+        <button>Start Now</button><br><br>
+
+        <img src="img/kazuha.jpg" alt="" height="200px" width="200px" >
+    </article>
+
+    <article class="anuncio">
+        <div class="feature-anuncio">
+            <figure class="feature-figures">
+                <img src="img/kazuhaa.jpg" alt="">
+            </figure>
+            <h3>Este es el anuncio</h3>
+            <p>
+                Este es el parrafo de el anuncio, claramente, no dice nada
+                pero eso no importa...
+            </p>
+            <button>Start Now</button>
+        </div>
+
+
+    </article>
+
+</section>
+
+
+
 
 <section class="examen">
     <article class="examen-features">
