--- a/index.html
+++ b/index.html
@@ -5,33 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practica 1</title>
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="styles.css">  <!--llama a la hoja de estilos-->
 </head>
 
 <body>
-    <section class="fixed-header">
+    <nav class="navbar navbar-expand-sm bg-danger navbar-dark">
     <header class="header">
         <!--Logo con link a la pagina principal-->
-        <a>
+        <a class="navbar-brand">
             <img class="logo" src="img/Genshin-Impact-Logo.png" width="150px" height="10px"/>
             <!--Menu de navegacion-->
         </a>
-        <nav class="navbar">
+        <div class="navbar">
             <ul> <!--Contenedor de la lista, li es para poner un punto antes -->
                 <li>Protogemas</li>
                 <li>Mora</li>
                 <li>Personajes</li>
                 <li>Kazuha</li>
             </ul>
-        </nav>
+        </div>
+        
         <!--Contenedor de acciones de usuario-->
         <div class="actions">
             <a>Sign In</a>
-            <button>Start Free Trial</button>
+            <button class="btn btn-dark">Start Free Trial</button>
         </div>
 
     </header>
-    </section>
+    </nav>
 
     <h1>Mi Primer Pagina Este Semestre</h1> <!--Este es un comentario, esto sirve para poner titulos-->
     <h2>Heading level 2</h2>
