--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
 </head>
 
+
 <body>
     <nav class="navbar navbar-expand-sm bg-danger navbar-dark fixed-top">
               
@@ -55,13 +56,13 @@
                     <a class="nav-link" href="Protogemas.html">Protogemas</a>
                 </li>
                 <li  class="nav-item">
-                    <a class="nav-link" href="">Mora</a>
+                    <a class="nav-link" href="Moras.html">Mora</a>
+                </li>
+                <li  class="nav-item">
+                    <a class="nav-link" href="">Recursos</a>
                 </li>
                 <li  class="nav-item">
                     <a class="nav-link" href="">Personajes</a>
-                </li>
-                <li  class="nav-item">
-                    <a class="nav-link" href="">Gacha</a>
                 </li>
             </ul>
         </div>
