--- a/Protogemas.html
+++ b/Protogemas.html
@@ -13,6 +13,49 @@
 
 </head>
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+    .container {
+        position: relative;
+        width: 50%;
+    }
+
+    .image {
+        display: block;
+        width: 100%;
+        height: auto;
+    }
+
+    .overlay {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        height: 100%;
+        width: 100%;
+        opacity: 0;
+        transition: .5s ease;
+        background-color: #7c0c0c;
+    }
+
+    .container:hover .overlay {
+        opacity: 1;
+    }
+
+    .text {
+        color: white;
+        font-size: 20px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+        text-align: center;
+    }
+</style>
+
 <body>
 
     <nav class="navbar navbar-expand-sm bg-danger navbar-dark fixed-top">
@@ -39,13 +82,13 @@
                         <a class="nav-link" href="Protogemas.html">Protogemas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Mora</a>
+                        <a class="nav-link" href="Moras.html">Mora</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Personajes</a>
+                        <a class="nav-link" href="">Recursos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Gacha</a>
+                        <a class="nav-link" href="Personajes.html">Personajes</a>
                     </li>
                 </ul>
             </div>
@@ -82,6 +125,7 @@
         <li class="list-group-item">Conseguir logros</li>
         <li class="list-group-item">Participar en eventos</li>
         <li class="list-group-item">Subir items especiales</li>
+        <li class="list-group-item">Conseguir logros</li>
         <li class="list-group-item">Tarjeton</li>
     </ol>
 
@@ -104,8 +148,8 @@
     <div class="row">
         <div class="col p-3 container mt-3">
 
-            <h2>Protogemas</h2>
-            <p>¿Son importantes?</p>
+            <h2>Banner</h2>
+            <p>Personajes</p>
             <div class="card" style="width:400px">
                 <img class="card-img-top" src="img/gacha1.jpg" alt="Card image" style="width:100%">
                 <div class="card-body">
@@ -119,8 +163,8 @@
 
         <div class="col p-3 container mt-3">
 
-            <h2>Protogemas</h2>
-            <p>¿Son importantes?</p>
+            <h2>Banner</h2>
+            <p>Armas</p>
             <div class="card" style="width:400px">
                 <img class="card-img-top" src="img/gacha2.jpg" alt="Card image" style="width:100%">
                 <div class="card-body">
@@ -133,12 +177,12 @@
 
         <div class="col p-3 container mt-3">
 
-            <h2>Protogemas</h2>
-            <p>¿Son importantes?</p>
+            <h2>Deseos</h2>
+            <p>Dorado=GOOD</p>
             <div class="card" style="width:400px">
                 <video src="img/gachapon.mp4" alt="Card image" style="width:100%" controls></video>
                 <div class="card-body">
-                    <h4 class="card-title">gachapon</h4>
+                    <h4 class="card-title">Gachapon</h4>
                     <p class="card-text">Si quieres un personaje o un arma necesitas protogemas</p>
 
                 </div>
@@ -148,49 +192,64 @@
 
 
     <!-- Carousel -->
-<div id="demo" class="carousel slide" data-bs-ride="carousel">
+    <div id="demo" class="carousel slide" data-bs-ride="carousel">
 
-    <!-- Indicators/dots -->
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
-      <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
-      <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
-      <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
-    </div>
-  
-    <!-- The slideshow/carousel -->
-    <center><div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="img/gacha3.jpg" alt="Los Angeles" class="d-block w-50">
-      </div>
-    
-     <div class="carousel-item">
-        <img src="img/gacha4.jpg" alt="Chicago" class="d-block w-50">
-      </div>
-    
-      <div class="carousel-item">
-        <img src="img/gacha1.jpg" alt="New York" class="d-block w-50">
-      </div>
+        <!-- Indicators/dots -->
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
+        </div>
 
-      <div class="carousel-item">
-        <img src="img/gacha2.jpg" alt="New York" class="d-block w-50">
-      </div>
-    </center>
+        <!-- The slideshow/carousel -->
+        <center>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/gacha3.jpg" alt="Los Angeles" class="d-block w-50">
+                </div>
+
+                <div class="carousel-item">
+                    <img src="img/gacha4.jpg" alt="Chicago" class="d-block w-50">
+                </div>
+
+                <div class="carousel-item">
+                    <img src="img/gacha1.jpg" alt="New York" class="d-block w-50">
+                </div>
+
+                <div class="carousel-item">
+                    <img src="img/gacha2.jpg" alt="New York" class="d-block w-50">
+                </div>
+        </center>
     </div>
-  
+
     <!-- Left and right controls/icons -->
     <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon"></span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
-      <span class="carousel-control-next-icon"></span>
+        <span class="carousel-control-prev-icon"></span>
     </button>
     <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
         <span class="carousel-control-next-icon"></span>
-      </button>
-  </div>
-  <br>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+    </button>
+    </div>
+    <br>
 
+
+    <h2 class="container">Gachapon</h2>
+    <p class="container">Necesitas protogemas para tirar en este</p>
+
+    <div class="container">
+        <img src="img/destinos-y-encuentros.jpg" alt="Avatar" class="image">
+        <div class="overlay">
+            <div class="text">
+                El gachapon es el lugar donde consigues personajes, ya que las
+                protogemas que consigues las transformas en deseos para conseguir
+                el arma o personaje deseado
+            </div>
+        </div>
+    </div>
 
 
 
