--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practica 1</title>
+   
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="styles.css">  <!--llama a la hoja de estilos-->
     <script src="js/bootstrap.bundle.min.js"></script>
@@ -29,8 +30,66 @@
     }
     </script>
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {box-sizing: border-box;}
+
+body { 
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.header {
+  overflow: hidden;
+  background-color: #f1f1f1;
+  padding: 20px 10px;
+}
+
+.header a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px; 
+  line-height: 25px;
+  border-radius: 4px;
+}
+
+.header a.logo {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.header a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.header a.active {
+  background-color: dodgerblue;
+  color: white;
+}
+
+.header-right {
+  float: right;
+}
+
+@media screen and (max-width: 500px) {
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .header-right {
+    float: none;
+  }
+}
+</style>
 
 </head>
+
 
 
 <body>
@@ -62,7 +121,7 @@
                     <a class="nav-link" href="">Recursos</a>
                 </li>
                 <li  class="nav-item">
-                    <a class="nav-link" href="">Personajes</a>
+                    <a class="nav-link" href="Personajes.html">Personajes</a>
                 </li>
             </ul>
         </div>
@@ -196,8 +255,8 @@
     </article>
 </section>
 
-<section class="features">
-    <article class="feature-card">
+<div class="features">
+    <div class="feature-card">
         <div class="feature-content">
             <figure>
                 <img src="img/kazuhaaaa.jpg" alt="">
@@ -216,9 +275,9 @@
 
 
     </div>
-    </article>
+</div>
 
-    <article class="feature-card">
+    <div class="feature-card">
         <div class="feature-content">
             <figure>
                 <img src="img/kazuhaaaa.jpg" alt="">
@@ -237,9 +296,9 @@
 
 
     </div>
-    </article>
+</div>
 
-   <article class="feature-card">
+   <div class="feature-card">
         <div class="feature-content">
             <figure>
                 <img src="img/kazuhaaaa.jpg" alt="">
@@ -258,9 +317,9 @@
 
 
     </div>
-    </article>
+</div>
 
-    <article class="feature-card">
+    <div class="feature-card">
         <div class="feature-content">
             <figure>
                 <img src="img/kazuhaaaa.jpg" alt="">
@@ -279,9 +338,9 @@
 
 
     </div>
-    </article>
+</div>
 
-</section>
+</div>
 
 <section class="tarea">
     <article class="parrafo">
