--- a/Protogemas.html
+++ b/Protogemas.html
@@ -202,7 +202,7 @@ body {
     <br>
 
 
-    <div class="row">
+    <div class="row" style="column-gap: 1%;">
         <div class="col p-3 container mt-3">
 
             <h2>Banner</h2>
@@ -300,7 +300,7 @@ body {
     <div class="container">
         <img src="img/destinos-y-encuentros.jpg" alt="Avatar" class="image">
         <div class="overlay">
-            <div class="text">
+            <div class="text" style="font-size: 45%;">
                 El gachapon es el lugar donde consigues personajes, ya que las
                 protogemas que consigues las transformas en deseos para conseguir
                 el arma o personaje deseado
