--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ body {
                     <a class="nav-link" href="Moras.html">Mora</a>
                 </li>
                 <li  class="nav-item">
-                    <a class="nav-link" href="">Recursos</a>
+                    <a class="nav-link" href="Recursos.html">Recursos</a>
                 </li>
                 <li  class="nav-item">
                     <a class="nav-link" href="Personajes.html">Personajes</a>
