--- a/Moras.html
+++ b/Moras.html
@@ -96,10 +96,10 @@ body {
                         <a class="nav-link" href="Protogemas.html">Protogemas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Mora</a>
+                        <a class="nav-link" href="Moras.html">Mora</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Recursos</a>
+                        <a class="nav-link" href="Recursos.html">Recursos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="Personajes.html">Personajes</a>
