--- a/Personajes.html
+++ b/Personajes.html
@@ -10,6 +10,14 @@
     <link rel="stylesheet" href="styles.css"> <!--llama a la hoja de estilos-->
     <script src="js/bootstrap.bundle.min.js"></script>
 
+    <script>
+        function color(){
+            document.getElementById("nombre").style.backgroundColor=" #5c0a0a";
+            document.getElementById("nombre").style.color="white";
+
+        }
+    </script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {box-sizing: border-box;}
@@ -100,10 +108,10 @@ body {
                         <a class="nav-link" href="Moras.html">Mora</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Recursos</a>
+                        <a class="nav-link" href="Recursos.html">Recursos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Personajes</a>
+                        <a class="nav-link" href="Personajes.html">Personajes</a>
                     </li>
                 </ul>
             </div>
@@ -122,7 +130,11 @@ body {
 
     <div class="container-fluid p-5  text-black text-center">
         <h1>Personajes</h1>
-        <p>Todo lo basico sobre los personajes en Genshin</p>
+        <p id="nombre">Todo lo basico sobre los personajes en Genshin</p>
+        <button type="button" onclick="color()">Click</button>
+        <br>
+        <button onclick="alert('Te dije que no')">No hagas Click</button>
+
     </div>
 
     <div class="row">
