--- a/Protogemas.html
+++ b/Protogemas.html
@@ -142,7 +142,7 @@ body {
                         <a class="nav-link" href="Moras.html">Mora</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Recursos</a>
+                        <a class="nav-link" href="Recursos.html">Recursos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="Personajes.html">Personajes</a>
@@ -300,7 +300,7 @@ body {
     <div class="container">
         <img src="img/destinos-y-encuentros.jpg" alt="Avatar" class="image">
         <div class="overlay">
-            <div class="text" style="font-size: 45%;">
+            <div class="text" style="font-size: 100%;">
                 El gachapon es el lugar donde consigues personajes, ya que las
                 protogemas que consigues las transformas en deseos para conseguir
                 el arma o personaje deseado
